--- a/index.html
+++ b/index.html
@@ -2084,15 +2084,11 @@
 
 
 
-    <script src="../scripts/jquery-3.3.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="../scripts/vender.js"></script>
 
 
-    <!-- <script src="../scripts/jquery-3.3.1.min.js"></script>
-    <script defer src="../scripts/jquery.easing.min.js"></script> -->
-    <!-- <script src="../scripts/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"></script> -->
-    <!-- <script defer src="../scripts/bootstrap.bundle.min.js"></script>
-    <script defer src="../scripts/swiper-bundle.min.js"></script> -->
+ 
     
 
 
