--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
     <!-- Hover.css v2.1.1 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" rel="stylesheet" />
 
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
+<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <!-- <script async defer src="https://www.google.com/recaptcha/api.js?render=6LfqXcUUAAAAAKo-s4047w0_nifG8y6-tAIbb9WP"></script> -->
       <script>
