--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@
                         <div class="embed-responsive embed-responsive-16by9" style="max-width: 640px;margin: 0 auto;">
 
 
-                            <video width="" height="" aaautoplay="aaautoplay" poster="../video/catherine2.jpg"
+                            <video width="" height="" aaautoplay="aaautoplay" poster="./images/catherine2.jpg"
                                 muted="true" controls="controls" loop="loop">
                                 <source src="../video/catherine.mp4" type="video/mp4">
                                 <!-- <source src="../video/catherine.mp4" type="video/ogg"> -->
