修改我們優勢 flex

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
     <!-- <link rel="stylesheet" href="./css/style.css" /> -->
-    <link rel="stylesheet" href="./css/all.css" />
+    <link rel="stylesheet" href="./scss/all.css" />
     <link type="text/css" rel="stylesheet"
         media="only screen and (min-device-width: 768px) and (max-device-width: 1024px)" href="./css/pad.css" />
 
@@ -554,36 +554,36 @@
     <section class="container mt-m" style="">
         <div class="card-group">
             <div class="col-sm-4 mt-ms" style="">
-                
-                    <div class="card mb-3 rounded-0 bg-light border-0 pl-0 h-100">
 
-                        <img src="./images/shad2.jpg" class="card-img-top" alt="...">
-                        <div class="card-img-overlay text-white ">
+                <div class="card mb-3 rounded-0 bg-light border-0 pl-0 h-100">
 
-                            <h4 class="card-text text-center cover-title" style="">Great Teachers
-                            </h4>
+                    <img src="./images/shad2.jpg" class="card-img-top" alt="...">
+                    <div class="card-img-overlay text-white ">
 
-                        </div>
-                        <div class="card-body text-center btn-light">
-                            <h5 class="card-title">優質師資</h5>
-                            <p class="card-text">具有10-20年教學背景的外籍老師，對班裡的每位學生都充分了解，知道他們的弱點，會糾正學生的發音、文法並提示評分及答題重點</p>
+                        <h4 class="card-text text-center cover-title" style="">Great Teachers
+                        </h4>
 
+                    </div>
+                    <div class="card-body text-center btn-light">
+                        <h5 class="card-title">優質師資</h5>
+                        <p class="card-text">具有10-20年教學背景的外籍老師，對班裡的每位學生都充分了解，知道他們的弱點，會糾正學生的發音、文法並提示評分及答題重點</p>
 
-
-                        </div>
-
-                        <div class="card-body d-flex align-items-end btn-gradient">
-
-
-                            <a class="btn  button-three ok  w-100" style=""
-                                href="https://www.toeflibt100.com/about-steven/"> Read more</a>
-
-                        </div>
 
 
                     </div>
 
-            
+                    <div class="card-body d-flex align-items-end btn-gradient">
+
+
+                        <a class="btn  button-three ok  w-100" style=""
+                            href="https://www.toeflibt100.com/about-steven/"> Read more</a>
+
+                    </div>
+
+
+                </div>
+
+
             </div>
             <div class="col-sm-4 mt-ms" style="">
 
@@ -708,111 +708,115 @@
 
     <section class="container " style="margin-top: 150px;">
         <p class="text-center  whygosubtitle font-weight-bold my-1"> Steven's 優勢 </p>
-        <div class="row my-5" ㄋ>
-            <div class="col-sm-4">
-                <div class="card mb-3 rounded-0 bg-white border-0">
-                    <img src="./images/teacher02.jpg" class="card-img-top" alt="...">
-                    <div class="card-img-overlay text-white ">
+        <div class="card-deck">
+            <div class="row my-5">
+                <div class="col-sm-4">
+                    <div class="card mb-3 rounded-0 bg-white border-0 h-100">
+                        <img src="./images/teacher02.jpg" class="card-img-top" alt="...">
+                        <div class="card-img-overlay text-white ">
 
-                        <h4 class="card-text text-center pic-title" style="">Level Tests</h4>
+                            <h4 class="card-text text-center pic-title" style="">Level Tests</h4>
 
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">程度分班</h5>
-                        <p class="card-text">提供程度測驗，顧問和老師依您測驗結果進行分班，精準掌握您的程度，節省您的時間</p>
-
-
-
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card mb-3 rounded-0 bg-white border-0 ">
-                    <img src="./images/small_class.jpg" class="card-img-top" alt="...">
-                    <div class="card-img-overlay text-white ">
-
-                        <h4 class="card-text text-center pic-title" style="">Small Classes</h4>
-
-
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">小班制</h5>
-                        <p class="card-text ">一班平均5-15人，每一位學生都有足夠的時間與專業的老師進行談話與互動</p>
+                        </div>
+                        <div class="card-body align-self-end">
+                            <p class="card-text h5">程度分班</p>
+                            <p class="card-text">提供程度測驗，顧問和老師依您測驗結果進行分班，精準掌握您的程度，節省您的時間</p>
 
 
 
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card mb-3 rounded-0 bg-white border-0  position-relative">
-                    <img src="./images/talking.jpg" class="card-img-top" alt="...">
-                    <div class="card-img-overlay text-white ">
+                <div class="col-sm-4">
+                    <div class="card mb-3 rounded-0 bg-white border-0 h-100">
+                        <img src="./images/small_class.jpg" class="card-img-top" alt="...">
+                        <div class="card-img-overlay text-white ">
 
-                        <h4 class="card-text text-center pic-title" style="">English Environment
-                        </h4>
+                            <h4 class="card-text text-center pic-title" style="">Small Classes</h4>
+
+
+                        </div>
+                        <div class="card-body align-self-end">
+                            <h5 class="card-title">小班制</h5>
+                            <p class="card-text ">一班平均5-15人，每一位學生都有足夠的時間與專業的老師進行談話與互動</p>
+
+
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card mb-3 rounded-0 bg-white border-0  h-100">
+                        <img src="./images/talking.jpg" class="card-img-top" alt="...">
+                        <div class="card-img-overlay text-white ">
+
+                            <h4 class="card-text text-center pic-title" style="">English Environment
+                            </h4>
+
+                        </div>
+                        <div class="card-body align-self-end">
+                            <h5 class="card-title">英文環境</h5>
+                            <p class="card-text ">採西方教育風格，全英的學習環境可媲美英語系國家的語言學校</p>
+
+
+
+                        </div>
 
                     </div>
-                    <div class="card-body align-self-end">
-                        <h5 class="card-title">英文環境</h5>
-                        <p class="card-text ">採西方教育風格，全英的學習環境可媲美英語系國家的語言學校</p>
-
-
-
-                    </div>
-
                 </div>
             </div>
         </div>
-        <div class="row my-5">
-            <div class="col-sm-4">
-                <div class="card mb-3 rounded-0 bg-white border-0  ">
-                    <img src="./images/plan.jpg" class="card-img-top" alt="...">
-                    <div class="card-img-overlay text-white ">
+        <div class="card-deck">
+            <div class="row my-5 ">
+                <div class="col-sm-4">
+                    <div class="card mb-3 rounded-0 bg-white border-0  h-100">
+                        <img src="./images/plan.jpg" class="card-img-top" alt="...">
+                        <div class="card-img-overlay text-white ">
 
-                        <h4 class="card-text text-center pic-title" style="">Study Plans</h4>
+                            <h4 class="card-text text-center pic-title" style="">Study Plans</h4>
 
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">讀書計畫</h5>
-                        <p class="card-text">顧問和老師會為每位學生依照他們的目標，量身打造讀書計畫</p>
-
-
-
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card mb-3 rounded-0 bg-white border-0 ">
-                    <img src="./images/source.jpg" class="card-img-top" alt="...">
-                    <div class="card-img-overlay text-white ">
-
-                        <h4 class="card-text text-center pic-title" style="">Resources</h4>
-
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">學習資源</h5>
-                        <p class="card-text">我們教材都是外師針對考試題型所編制，且學生擁有線上學習系統來輔助學習</p>
+                        </div>
+                        <div class="card-body align-self-end">
+                            <h5 class="card-title">讀書計畫</h5>
+                            <p class="card-text">顧問和老師會為每位學生依照他們的目標，量身打造讀書計畫</p>
 
 
 
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card mb-3 rounded-0 bg-white border-0 ">
-                    <img src="./images/model_test.jpg" class="card-img-top" alt="...">
-                    <div class="card-img-overlay text-white ">
+                <div class="col-sm-4">
+                    <div class="card mb-3 rounded-0 bg-white border-0 h-100">
+                        <img src="./images/source.jpg" class="card-img-top" alt="...">
+                        <div class="card-img-overlay text-white ">
 
-                        <h4 class="card-text text-center pic-title" style="">A Model Test</h4>
+                            <h4 class="card-text text-center pic-title" style="">Resources</h4>
 
+                        </div>
+                        <div class="card-body align-self-end">
+                            <h5 class="card-title">學習資源</h5>
+                            <p class="card-text">我們教材都是外師針對考試題型所編制，且學生擁有線上學習系統來輔助學習</p>
+
+
+
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">一次免費模考</h5>
-                        <p class="card-text">課程結束前，會有一次免費模考，老師對您聽說讀寫全方位的分析</p>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card mb-3 rounded-0 bg-white border-0 h-100">
+                        <img src="./images/model_test.jpg" class="card-img-top" alt="...">
+                        <div class="card-img-overlay text-white ">
+
+                            <h4 class="card-text text-center pic-title" style="">A Model Test</h4>
+
+                        </div>
+                        <div class="card-body align-self-end ">
+                            <h5 class="card-title">一次免費模考</h5>
+                            <p class="card-text">課程結束前，會有一次免費模考，老師對您聽說讀寫全方位的分析</p>
 
 
 
+                        </div>
                     </div>
                 </div>
             </div>
