--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
     <!-- <link rel="stylesheet" href="./css/style.css" /> -->
-    <link rel="stylesheet" href="./scss/all.css" />
+    <link rel="stylesheet" href="./css/all.css" />
     <link type="text/css" rel="stylesheet"
         media="only screen and (min-device-width: 768px) and (max-device-width: 1024px)" href="./css/pad.css" />
 
